--- a/.config/eww/powerbuttons/eww.scss
+++ b/.config/eww/powerbuttons/eww.scss
@@ -1,6 +1,5 @@
 .logoff, .sleep, .shutdown, .reboot {
     border-style: solid;
-    border-width: 0.14rem;
     border-radius: 0.4rem;
     background-color: #1d1d27;
 }
@@ -9,39 +8,45 @@
     border-radius: .4rem;
 }
 
-.shutdown {
-    border-color: #ffadad;
-}
-
 .shutdown_btn {
     color: #ffadad ;
 }
 
-.reboot {
-    border-color: #5ee3f2;
+.shutdown_btn:hover {
+    background: #ffadad;
 }
 
 .reboot_btn {
     color: #5ee3f2;
 }
 
-.sleep {
-    border-color: #cddfa0;
+.reboot_btn:hover {
+    background: #5ee3f2;
 }
 
 .sleep_btn {
     color: #cddfa0;
 }
 
-.logoff {
-    border-color: #b4befe;
+.sleep_btn:hover {
+    background: #cddfa0;
 }
 
 .logoff_btn {
     color: #b4befe;
 }
 
+.logoff_btn:hover {
+    background: #b4befe;
+}
+
+.sleep_btn:hover, .logoff_btn:hover, .reboot_btn:hover, .shutdown_btn:hover {
+    color: #1d1d27;
+}
+
 .sleep_btn, .logoff_btn, .shutdown_btn, .reboot_btn {
-    font-size: 2rem;
+    font-size: 1.7rem;
     background: transparent;
+    border-width: 0;
+
 }
