--- a/.config/waybar/style.css
+++ b/.config/waybar/style.css
@@ -1,7 +1,7 @@
 * {    
     min-height: 0;
     font-size: 1.01rem;
-    font-weight: 600;
+    font-weight: 500;
     font-family: "Jetbrains Mono Nerd Font" ;
 }
 
@@ -37,7 +37,7 @@ button:hover {
 
 #workspaces {
     transition: 0.3s;
-    background: #1d1d27; 
+    background: #17121C; 
     border-radius: 0.4em;
 }
 
@@ -50,7 +50,7 @@ button:hover {
 }
 
 #workspaces button:hover {
-    color: #1d1d27;
+    color: #17121C;
     background: #ffadad;
 }
 
@@ -84,7 +84,7 @@ button:hover {
 .modules-left, .modules-center, .modules-right {
     padding: 4px;
     border-radius: 0.4rem;
-    background: #1d1d27;
+    background: #17121C;
 }
 
 .modules-left {
@@ -123,7 +123,7 @@ label:focus {
 #network:hover,
 #pulseaudio:hover,
 #clock:hover {
-    color: #1d1d27; 
+    color: #17121C; 
     background: #b4befe; 
 }
 
@@ -132,7 +132,7 @@ label:focus {
 }
 
 #pulseaudio.muted:hover {
-    color: #1d1d27;
+    color: #17121C;
     background: #f38ba8;
 }
 
@@ -142,7 +142,7 @@ label:focus {
 }
 
 #disk, #cpu, #memory {
-    background: #1d1d27;
+    background: #17121C;
 
     padding-left: 10px;
     padding-right: 10px;
@@ -160,7 +160,7 @@ label:focus {
 }
 
 #disk:hover{
-    color: #1d1d27; 
+    color: #17121C; 
     background: #cddfa0;
 }
 
@@ -169,7 +169,7 @@ label:focus {
 }
 
 #memory:hover { 
-    color: #1d1d27; 
+    color: #17121C; 
     background: #ffadad;
 }
 
@@ -178,7 +178,7 @@ label:focus {
 }
 
 #cpu:hover {
-    color: #1d1d27; 
+    color: #17121C; 
     background: #5ee3f2;
 }
 
@@ -188,7 +188,7 @@ label:focus {
 
 #network.disconnected:hover {
     background: #f38ba8;
-    color: #1d1d27; 
+    color: #17121C; 
 }
 
 #tray {
